--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8681,7 +8681,7 @@
             // 'Content-Type': 'application/x-www-form-urlencoded',
           },
           body: JSON.stringify(dataset), // body data type must match "Content-Type" header
-        });
+        }).then((res) => res.json());
 
         const { story_id, story_name } = response;
         for (const i in story_id) {
@@ -8691,6 +8691,7 @@
             }
           }
         }
+        
         for (const story of stories) {
           console.log(story.title);
         }
