--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
         background-color: #efb54a;
       }
       .container-coffee {
-        height: 350px;
+        height: 250px;
         width: 350px;
         position: relative;
         transform: translate(-50%, 0);
@@ -356,7 +356,10 @@
               flex-column
               justify-content-center
               text-center
+              p-5
+              rounded
             "
+            style="background-color: #9b624d"
           >
             <label for="file" class="col-form-label"
               >Загрузите файл с новостями</label
