--- a/frontend/index.html
+++ b/frontend/index.html
@@ -348,7 +348,7 @@
         </div>
       </div>
       <div class="row">
-        <form class="bg-primary d-flex justify-content-center py-2">
+        <form class="d-flex justify-content-center py-2">
           <div
             class="
               form-group
@@ -372,6 +372,9 @@
             </div>
           </div>
         </form>
+        <div class="result">
+          
+        </div>
       </div>
     </div>
     <script src="main.js"></script>
