big front update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -358,8 +358,9 @@
               text-center
               p-5
               rounded
+              text-white
             "
-            style="background-color: #9b624d"
+            style="background-color: #3b240e"
           >
             <label for="file" class="col-form-label"
               >Загрузите файл с новостями</label
@@ -372,9 +373,7 @@
             </div>
           </div>
         </form>
-        <div class="result">
-          
-        </div>
+        <div class="result"></div>
       </div>
     </div>
     <script src="main.js"></script>
