--- a/frontend/index.html
+++ b/frontend/index.html
@@ -347,6 +347,9 @@
           <div class="lower-btn"></div>
         </div>
       </div>
+      <div>
+        <div class="btn btn-warning d-none download">Скачать</div>
+      </div>
       <div class="row">
         <form class="d-flex justify-content-center py-2">
           <div
