--- a/frontend/index.html
+++ b/frontend/index.html
@@ -348,6 +348,9 @@
         </div>
       </div>
       <div>
+        <h2 class="loading d-none">Идёт загрузка...</h2>
+      </div>
+      <div>
         <div class="btn btn-warning d-none download">Скачать</div>
       </div>
       <div class="row">
